src/objects/Feature_SBU__c.object
<CustomObject>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <formula>Text( Feature__r.Feature_Type__c ) +&quot; | &quot;+ Text( Feature__r.Object_Feature__c )+&quot; | &quot;+  TEXT(Feature__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Object_Usage__c</referenceTo>
        <relationshipLabel>Feature SBUs</relationshipLabel>
        <relationshipName>Feature_SBUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SBU</label>
        <referenceTo>SBU_Information__c</referenceTo>
        <relationshipLabel>Feature SBUs</relationshipLabel>
        <relationshipName>Feature_SBUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feature SBU</label>
    <nameField>
        <displayFormat>SBU-Feature-{000000}</displayFormat>
        <label>Feature SBU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature SBUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>